--- a/package.json
+++ b/package.json
@@ -20,8 +20,24 @@
     "hexo-generator-tag": "^2.0.0",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-marked": "^6.0.0",
+    "hexo-renderer-pug": "^3.0.0",
     "hexo-renderer-stylus": "^2.1.0",
     "hexo-server": "^3.0.0",
-    "hexo-theme-landscape": "^0.0.3"
+    "hexo-theme-landscape": "^0.0.3",
+    "yuque-hexo": "^1.9.5"
+  },
+  "devDependencies": {},
+  "yuqueConfig": {
+    "postPath": "source/_posts/yuque",
+    "cachePath": "yuque.json",
+    "mdNameFormat": "title",
+    "adapter": "markdown",
+    "concurrency": 5,
+    "baseUrl": "https://www.yuque.com/api/v2",
+    "login": "alipaywalke",
+    "repo": "rkqnph",
+    "token": "VuZjeTkgpwCMXbTj77x25KIvQoSECKFq5ruzKfBL",
+    "onlyPublished": false,
+    "onlyPublic": false
   }
 }
