--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
   },
   "devDependencies": {},
   "yuqueConfig": {
-    "postPath": "source/_posts/yuque",
+    "postPath": "source/_posts",
     "cachePath": "yuque.json",
     "mdNameFormat": "title",
-    "adapter": "markdown",
+    "adapter": "hexo",
     "concurrency": 5,
     "baseUrl": "https://www.yuque.com/api/v2",
     "login": "alipaywalke",
