--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,7 @@ on: [push, repository_dispatch]
 jobs:
   blog-cicd:
     name: Hexo blog build & deploy
+    # runs-on: ubuntu-latest
     runs-on: ubuntu-latest
     env:
       TZ: Asia/Shanghai
