--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,8 @@ jobs:
     - name: 启动 node
       uses: actions/setup-node@v1
       with:
-        node-version: '12.x'
+        # node-version: '12.x'
+        node-version: '16.x'
     - name: Cache node modules
       uses: actions/cache@v1
       with:
